--- a/data/manifest.json
+++ b/data/manifest.json
@@ -1,9 +1,12 @@
 {
   "quizzes": [
+    "spanish-a1-numbers.json",
+    "spanish-a1-places-city.json",
     "spanish-a1.json"
   ],
   "workouts": [
+    "codzienny.json",
     "steel-guard.json"
   ],
-  "generatedAt": "2025-10-24T19:31:34.651Z"
+  "generatedAt": "2025-10-24T19:45:11.304Z"
 }
