--- a/data/manifest.json
+++ b/data/manifest.json
@@ -1,5 +1,6 @@
 {
   "quizzes": [
+    "english-a1-restaurant.json",
     "spanish-a1-numbers.json",
     "spanish-a1-places-city.json",
     "spanish-a1.json"
@@ -8,5 +9,5 @@
     "codzienny.json",
     "steel-guard.json"
   ],
-  "generatedAt": "2025-10-24T19:45:11.304Z"
+  "generatedAt": "2025-10-25T05:42:45.647Z"
 }
