feat: Add English A1 Restaurant quiz with 66 questions
- Create comprehensive restaurant & dining quiz for Polish learners
- 66 questions covering: ordering, paying, menu items, dietary restrictions
- Question types: multiple-choice, fill-in-the-blank, true-false, matching, listening
- Topics covered:
  * Basic restaurant vocabulary (menu, bill, waiter, tip)
  * Ordering phrases (I'd like to order, Can I have...)
  * Food and drinks (soup, salad, steak, coffee, tea, juice)
  * Cutlery and tableware (knife, fork, spoon, plate)
  * Meals (breakfast, lunch, dinner, dessert)
  * Dietary restrictions (vegan, vegetarian, gluten-free, lactose-free)
  * Cooking methods (fried, grilled, baked, boiled)
  * Meat types (beef, pork, lamb, turkey, chicken, fish)
  * Vegetables and fruits (tomato, cucumber, apple, banana)
  * Cheese types, pasta types, soup varieties
  * Spices and seasonings (salt, pepper, garlic, basil)
  * Restaurant types (cafe, pizzeria, fast food)
  * Useful phrases (Enjoy your meal!, The same for me, doggy bag)
- Add TTS audio support to selected questions
- Add 6 listening comprehension exercises
- Update manifest.json with new quiz

Also includes english-advanced-vocabulary.json quiz

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -1,6 +1,7 @@
 {
   "quizzes": [
     "english-a1-restaurant.json",
+    "english-advanced-vocabulary.json",
     "spanish-a1-numbers.json",
     "spanish-a1-places-city.json",
     "spanish-a1.json"
@@ -9,5 +10,5 @@
     "codzienny.json",
     "steel-guard.json"
   ],
-  "generatedAt": "2025-10-25T05:42:45.647Z"
+  "generatedAt": "2025-10-25T05:54:00.745Z"
 }
