feat: Add Spanish A1 Prepositions quiz with 48 questions
- Create comprehensive quiz focused on Spanish prepositions of place
- 48 questions covering all major location prepositions
- Question types: multiple-choice, fill-in-the-blank, true-false, matching, listening
- Topics covered:
  * Basic prepositions (en, sobre, bajo, entre)
  * Position prepositions (delante de, detrás de, al lado de, debajo de)
  * Distance prepositions (cerca de, lejos de)
  * Direction prepositions (a la derecha, a la izquierda)
  * Inside/outside (dentro de, fuera de, alrededor de)
  * Complex prepositions (enfrente de, a través de, a lo largo de)
  * Contractions with 'del' (de + el)
  * Position on street (al final de, en la esquina, en el centro)
- Add 8 listening comprehension exercises with audio
- All prepositions with detailed explanations and examples
- Update manifest.json

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -4,11 +4,12 @@
     "english-advanced-vocabulary.json",
     "spanish-a1-numbers.json",
     "spanish-a1-places-city.json",
+    "spanish-a1-prepositions.json",
     "spanish-a1.json"
   ],
   "workouts": [
     "codzienny.json",
     "steel-guard.json"
   ],
-  "generatedAt": "2025-10-25T05:58:40.083Z"
+  "generatedAt": "2025-10-25T06:09:48.699Z"
 }
