--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
   "version": "2.0.0",
   "description": "Quiz & Workout App with Supabase backend",
   "scripts": {
-    "build": "node scripts/generate-config.js"
+    "build": "node scripts/generate-config.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:report": "jest --coverage && open test-report.html"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@jest/globals": "^30.2.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jest-html-reporter": "^4.3.0",
+    "jsdom": "^27.0.1"
+  }
 }
-
