--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "quiz-workout-app",
+  "name": "etrener",
   "version": "2.0.0",
-  "description": "Quiz & Workout App with Supabase backend",
+  "description": "eTrener - Interaktywna platforma edukacyjna z quizami, treningami i nauką języków",
   "scripts": {
     "build": "node scripts/generate-config.js",
     "test": "jest",
