--- a/data/manifest.json
+++ b/data/manifest.json
@@ -5,6 +5,7 @@
     "spanish-a1-numbers.json",
     "spanish-a1-places-city.json",
     "spanish-a1-prepositions.json",
+    "spanish-a1-time-routine.json",
     "spanish-a1.json"
   ],
   "workouts": [
