--- a/package.json
+++ b/package.json
@@ -7,15 +7,32 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:report": "jest --coverage && open test-report.html"
+    "test:report": "jest --coverage && open test-report.html",
+    "lint": "eslint js/**/*.js __tests__/**/*.js",
+    "lint:fix": "eslint js/**/*.js __tests__/**/*.js --fix",
+    "format": "prettier --write \"js/**/*.js\" \"__tests__/**/*.js\"",
+    "format:check": "prettier --check \"js/**/*.js\" \"__tests__/**/*.js\"",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@jest/globals": "^30.2.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jest-html-reporter": "^4.3.0",
-    "jsdom": "^27.0.1"
+    "jsdom": "^27.0.1",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5"
   }
 }
