chore: Update CI/CD configurations and documentation
- Updated .gitignore to require package-lock.json for CI/CD consistency.
- Upgraded actions/upload-artifact from v3 to v4 in CI workflows for improved performance and file handling.
- Added troubleshooting documentation for missing package-lock.json and deprecated action versions in GITHUB_ACTIONS.md.

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ js/config.js
 
 # Dependencies
 node_modules/
-package-lock.json
+# Note: package-lock.json should be committed for CI/CD consistency
 
 # Test reports and coverage
 coverage/
