refactor: Update ESLint configuration and improve variable naming in modules
- Added new readonly properties to ESLint configuration for audio and user session management.
- Refactored variable names in listening-engine.js, quiz-engine.js, and workout-engine.js to use a consistent naming convention with underscores for private state variables.
- Updated integration tests to reflect changes in variable names for better clarity and maintainability.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,22 @@
     "quizEngine": "readonly",
     "workoutEngine": "readonly",
     "listeningEngine": "readonly",
-    "knowledgeBaseEngine": "readonly"
+    "knowledgeBaseEngine": "readonly",
+    "playCorrectSound": "readonly",
+    "playIncorrectSound": "readonly",
+    "playTimerEndSound": "readonly",
+    "toggleMute": "readonly",
+    "isSoundMuted": "readonly",
+    "setMuted": "readonly",
+    "speakText": "readonly",
+    "stopSpeaking": "readonly",
+    "isTTSAvailable": "readonly",
+    "getAvailableVoices": "readonly",
+    "initAudio": "readonly",
+    "resetMistakes": "readonly",
+    "getCurrentUser": "readonly",
+    "isLoggedIn": "readonly",
+    "getSession": "readonly"
   }
 }
 
