chore(manifest): Update workouts list and regenerate timestamp
- Added new workout file "trening-7a-short.json" to the workouts list in manifest.json.
- Updated the generated timestamp to reflect the latest changes.

This update ensures the manifest is current with the latest workout data.

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -10,7 +10,8 @@
   ],
   "workouts": [
     "codzienny.json",
-    "steel-guard.json"
+    "steel-guard.json",
+    "trening-7a-short.json"
   ],
-  "generatedAt": "2025-10-31T07:52:53.603Z"
+  "generatedAt": "2025-11-10T08:23:48.877Z"
 }
