--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,17 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "echo 'No build needed - serving static files'",
   "outputDirectory": ".",
-  "framework": null
+  "framework": null,
+  "headers": [
+    {
+      "source": "/js/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
+  ]
 }
 
