chore(deployment): Add Vercel configuration files for build and ignore settings
- Introduced `.vercel-build-id` to track build timestamps and IDs for deployment.
- Created `.vercelignore` to specify files and directories to be ignored during deployment, ensuring only necessary files are included.
- Updated `vercel.json` to enhance cache control headers for improved resource management and performance.

--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,39 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
+          "value": "no-cache, no-store, must-revalidate"
+        },
+        {
+          "key": "Pragma",
+          "value": "no-cache"
+        },
+        {
+          "key": "Expires",
+          "value": "0"
+        }
+      ]
+    },
+    {
+      "source": "/index.html",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/data/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
         }
       ]
     }
-  ]
+  ],
+  "github": {
+    "silent": false
+  }
 }
 
