--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "echo 'No build needed - serving static files'",
+  "buildCommand": "bash scripts/vercel-build.sh",
   "outputDirectory": ".",
   "framework": null,
   "headers": [
