chore(package): Update husky prepare script for better compatibility
- Modified the `prepare` script in `package.json` to check for the existence of a Git repository before running husky, ensuring smoother integration in non-Git environments.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:fix": "eslint js/**/*.js __tests__/**/*.js --fix",
     "format": "prettier --write \"js/**/*.js\" \"__tests__/**/*.js\"",
     "format:check": "prettier --check \"js/**/*.js\" \"__tests__/**/*.js\"",
-    "prepare": "husky"
+    "prepare": "[ -d .git ] && husky || echo 'Skipping husky (not in git repo)'"
   },
   "lint-staged": {
     "*.js": [
